--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,34 @@ h1 {
     flex-direction: column;
 }
 
-.photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
-}
-
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    border-radius: 100px;
+    object-fit: cover;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+}
+
+.photographer_section article h2 {
+    color: #D3573C;
+    font-size: 36px;
+    line-height: 47px;
+    margin: 20px 0 0 0;
+}
+
+.photographer_section article .location {
+    color: #901C1C;
+    font-size: 13px;
+    margin: 0 0 3px 0;
+}
+
+.photographer_section article .tagline {
+    font-size: 10px;
+    margin: 0 0 3px 0;
+}
+
+.photographer_section article .price {
+    color: #757575;
+    font-size: 9px;
+    margin: 0;
 }
