--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,7 +1,3 @@
-#contact_modal {
-    display: none;
-}
-
 .photographer {
     background-color: #FAFAFA;
     height: 300px;
@@ -9,9 +5,22 @@
     padding: 0 50px;
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    
     justify-items: center;
     align-items: center;
+}
+
+@media (max-width: 990px) {
+    .photographer {
+        grid-template-columns: 1fr;
+        height: auto;
+        padding: 20px;
+        gap: 15px;        
+    }
+    .photographer__image {
+        grid-row-start: 1;
+    }
 }
 
 .photographer__header {
@@ -39,7 +48,11 @@
     margin: 0;
 }
 
-.photographer__contact-button {
+.photographer__button {
+
+}
+
+.contact_button {
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -56,8 +69,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 20px;
+    justify-content: space-evenly;
+    
+    margin: 0 100px;
+    gap: 30px 5px;
 }
 
 .media {
@@ -66,26 +81,98 @@
 }
 
 .media__image {
+    border-radius: 5px;
     width: 350px;
     height: 300px;
     object-fit: cover;
 }
 
 .media__video {
+    border-radius: 5px;
     width: 350px;
     height: 300px;
+    object-fit: cover;
 }
 
 .media__footer {
-    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    color: #911C1C;
+}
+
+.media__title-container {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 280px;
 }
 
 .media__title {
-    
+    font-size: 24px;
+    margin: 0;
 }
 
+.media__likes {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+}
 
+.media__like {
+    margin: 0;
+    font-size: 24px;
+}
 
+.media__heart {
+    font-size: 18px;
+}
+
+.sidebar {
+    background-color: #DB8876;
+    border-radius: 5px;
+
+    position: fixed;
+    bottom: 0;
+    right: 40px;
+    padding: 15px 20px 10px 20px;
+
+    display: flex;
+    flex-direction: row;
+    gap: 60px;
+}
+
+.sidebar__likes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.sidebar__like {
+    font-size: 24px;
+    margin: 0;
+}
+
+.sidebar__heart {
+    font-size: 18px;
+}
+
+.sidebar__rates {
+
+}
+
+.sidebar__rate {
+    font-size: 24px;
+    margin: 0;
+}
+
+#contact_modal {
+    display: none;
+}
 
 .modal {
     border-radius: 5px;
@@ -97,46 +184,139 @@
     justify-content: space-between;
     padding: 35px;
     margin: auto;
+
+    overflow: auto;
+    
+    position: fixed;
+    top: 50px;
+    left: 50%;
+    max-height: 80%;
+    transform: translate(-50%, 0);
 }
 
-.modal header {
+.modal__header {
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: baseline;
     width: 100%;
 }
 
-.modal header img {
+.modal__title {
+    margin: 0;
+    font-size: 64px;
+    font-weight: normal;
+    /* text-align: center; */
+}
+
+.modal__close {
+    width: 42px;
+    height: 42px;
     cursor: pointer;
 }
 
-.modal header h2 {
-    font-size: 64px;
-    font-weight: normal;
-    text-align: center;
-}
-
-form {
+#form {
     display: flex;
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
 }
 
-form label {
-    color: #312E2E;
-    font-size: 36px;
-}
-
-form div {
+.data {
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: self-start;
-    margin-bottom: 26px;
+    margin-bottom: 10px;
 }
 
-form input {
+.data__label {
+    color: #312E2E;
+    font-size: 36px;
+    font-weight: 400;
+    mix-blend-mode: normal;
+}
+
+.data__input {
     width: 100%;
+    padding: 0 12px;
     height: 68px;
+    font-size: 28px;
     border: none;
     border-radius: 5px;
+    box-sizing: border-box;
+}
+
+#message {
+    height: 136px;
+    resize: none;
+    padding: 12px;
+}
+
+.form__button {
+    margin-top: 25px;
+}
+
+#lightbox {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.9);
+    padding: 0;
+}
+
+#prev-media, #next-media, #close-lightbox {
+    position: absolute;
+    font-size: 48px;
+    color: #911C1C;
+    cursor: pointer;
+}
+
+#prev-media, #next-media {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#prev-media {
+    left: 10%;
+}
+
+#next-media {
+    right: 10%;
+    
+}
+
+#close-lightbox {
+    right: 10%;
+    top: 10%;
+}
+
+.lightbox__container {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    width: 65%;
+    height: 90%;
+    transform: translate(-50%, -5%);
+}
+
+.lightbox__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.lightbox__title {
+    position: absolute;
+    bottom: 0;
+    font-size: 24px;
+    color: #911C1C;
+    background: rgba(255, 255, 255, 0.4);
+    margin: 0;
+    padding: 0 5px;
+    border-radius: 0 5px 0 0;
 }
