--- a/css/photographer.css
+++ b/css/photographer.css
@@ -310,6 +310,13 @@
     border-radius: 5px;
 }
 
+.lightbox__video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
 .lightbox__title {
     position: absolute;
     bottom: 0;
