--- a/css/photographer.css
+++ b/css/photographer.css
@@ -55,7 +55,7 @@
 .contact_button {
     font-size: 20px;
     font-weight: bold;
-    color: white;
+    color: #FFFFFF;
     padding: 11px;
     width: 170px;
     height: 70px;
@@ -64,6 +64,27 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
+
+#sort {
+    margin: 20px 100px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+#sort-selection {
+    background-color: #911C1C;
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+
+
+
 
 .medias {
     display: flex;
