--- a/css/photographer.css
+++ b/css/photographer.css
@@ -268,6 +268,11 @@
     box-sizing: border-box;
 }
 
+.data__desc {
+    display: none;
+    visibility: hidden;
+}
+
 #message {
     height: 136px;
     resize: none;
